Fixed table overflow, improved toggle generator

--- a/src/app/pages/generator-page/generator-page.component.scss
+++ b/src/app/pages/generator-page/generator-page.component.scss
@@ -40,9 +40,10 @@ table {
   width: 100%;
   margin-top: 30px;
   tr {
-    height: 2em;
     td {
+      height: 2em;
       width: 2em;
+      padding: 0;
 
       &.coordinate {
         color: $gray1;
